--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-fast-marquee": "^1.6.4",
+    "react-icons": "^5.0.1",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
