--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^2.2.7",
     "emailjs-com": "^3.2.0",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "typewriter-effect": "^2.21.0"
   },
